tests/NormalTests/paczka1/fuzzy1/65292268.err
Error in line 15: 5Aj7d06CQ8 S499 70,3
Error in line 20: S499 S908 62,8
Error in line 16: 5Aj7d06CQ8 S908 59,2
Error in line 23: 5DyXUmvcu5 S499 64,2
Error in line 37: S499 S908 3,3
